preliminary refactor: compiles, untested

--- a/crates/bevy_editor_pls_core/Cargo.toml
+++ b/crates/bevy_editor_pls_core/Cargo.toml
@@ -12,5 +12,8 @@ bevy = { version = "0.15", default-features = false, features = [
     "bevy_window",
 ] }
 bevy-inspector-egui.workspace = true
+bevy-trait-query.workspace = true
+dyn-clone.workspace = true
 indexmap = "2"
 egui_dock.workspace = true
+polonius-the-crab = "*"
