--- a/crates/bevy_editor_pls/Cargo.toml
+++ b/crates/bevy_editor_pls/Cargo.toml
@@ -23,6 +23,7 @@ default = ["default_windows"]
 bevy_editor_pls_core.workspace = true
 bevy_editor_pls_default_windows = { workspace = true, optional = true }
 bevy = { version = "0.15", default-features = false, features = ["x11"] }
+dyn-clone = "1.0"
 egui.workspace = true
 transform-gizmo-bevy.workspace = true
 # bevy_framepace = { version = "0.12", default-features = false }
