--- a/crates/bevy_editor_pls/Cargo.toml
+++ b/crates/bevy_editor_pls/Cargo.toml
@@ -16,7 +16,7 @@ default_windows = [
     "bevy/bevy_render",
     "bevy/bevy_pbr",
 ]
-highlight_changes = ["bevy_editor_pls_default_windows/highlight_changes"]
+#highlight_changes = ["bevy_editor_pls_default_windows/highlight_changes"]
 default = ["default_windows"]
 
 [dependencies]
